# tasty-golden

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  tasty-golden.cabal  test-framework-golden.cabal
.github/workflows/: ci.yaml  haskell-ci.yml  stack.yml
Test/: Golden.hs
Test/Framework/Providers/: Golden.hs
Test/Framework/Providers/Golden/: Advanced.hs
Test/Golden/: Advanced.hs  Console.hs  Internal.hs  Manage.hs
Test/Tasty/: Golden.hs
Test/Tasty/Golden/: Advanced.hs  Console.hs  Internal.hs  Manage.hs  Simple.hs
example/: example.hs
tests/: .gitattributes  test.hs
tests/golden/: after-accept.golden  before-accept.golden  with-accept.golden
