name:                tasty-golden
version:             2.2.0.1
synopsis:            Golden tests support for tasty
description:
  This package provides support for «golden testing».

  A golden test is an IO action that writes its result to a file.
  To pass the test, this output file should be identical to the corresponding
  «golden» file, which contains the correct result for the test.

license:             MIT
license-file:        LICENSE
Homepage:            https://github.com/feuerbach/tasty-golden
Bug-reports:         https://github.com/feuerbach/tasty-golden/issues
author:              Roman Cheplyaka
maintainer:          Roman Cheplyaka <roma@ro-che.info>
-- copyright:           
category:            Testing
build-type:          Simple
cabal-version:       >=1.8

Source-repository head
  type:     git
  location: git://github.com/feuerbach/tasty-golden.git

library
  exposed-modules:     Test.Tasty.Golden
                       Test.Tasty.Golden.Advanced
                       Test.Tasty.Golden.Manage
  other-modules:
                       Test.Tasty.Golden.Internal
  build-depends:
    base ==4.*,
    tasty >= 0.5,
    bytestring,
    process,
    mtl,
    optparse-applicative,
    filepath,
    temporary >= 1.1,
    tagged
