name:                tasty-golden
version:             2.3.2
synopsis:            Golden tests support for tasty
description:
  This package provides support for «golden testing».

  A golden test is an IO action that writes its result to a file.
  To pass the test, this output file should be identical to the corresponding
  «golden» file, which contains the correct result for the test.

  To get started with golden testing and this library, see
  <https://ro-che.info/articles/2017-12-04-golden-tests Introduction to golden testing>.

license:             MIT
license-file:        LICENSE
Homepage:            https://github.com/feuerbach/tasty-golden
Bug-reports:         https://github.com/feuerbach/tasty-golden/issues
author:              Roman Cheplyaka
maintainer:          Roman Cheplyaka <roma@ro-che.info>
-- copyright:           
category:            Testing
build-type:          Simple
cabal-version:       >=1.14
extra-source-files:  CHANGELOG.md

Source-repository head
  type:     git
  location: git://github.com/feuerbach/tasty-golden.git

library
  Default-language:
    Haskell2010
  exposed-modules:     Test.Tasty.Golden
                       Test.Tasty.Golden.Advanced
                       Test.Tasty.Golden.Manage
  other-modules:
                       Test.Tasty.Golden.Internal

  ghc-options: -Wall

  build-depends:
    base ==4.*,
    tasty >= 1.0.1,
    bytestring >= 0.10,
    process,
    mtl,
    optparse-applicative,
    filepath,
    temporary,
    tagged,
    deepseq,
    containers,
    directory,
    async

Test-suite test
  Default-language:
    Haskell2010
  Type:
    exitcode-stdio-1.0
  Hs-source-dirs:
    tests
  Main-is:
    test.hs
  Build-depends:
      base >= 4 && < 5
    , tasty
    , tasty-hunit
    , tasty-golden
    , filepath
    , directory
    , process
    , temporary-rc
