cabal-version:       1.14
name:                tasty-golden
version:             2.3.6
synopsis:            Golden tests support for tasty
description:
  This package provides support for «golden testing».

  A golden test is an IO action that writes its result to a file.
  To pass the test, this output file should be identical to the corresponding
  «golden» file, which contains the correct result for the test.

  To get started with golden testing and this library, see
  <https://ro-che.info/articles/2017-12-04-golden-tests Introduction to golden testing>.

license:             MIT
license-file:        LICENSE
Homepage:            https://github.com/UnkindPartition/tasty-golden
Bug-reports:         https://github.com/UnkindPartition/tasty-golden/issues
author:              Roman Cheplyaka
maintainer:          Roman Cheplyaka <roma@ro-che.info>
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  example/golden/fail/*.golden
  example/golden/success/*.golden
  tests/golden/*.golden

tested-with:
  GHC == 9.14.1
  GHC == 9.12.2
  GHC == 9.10.3
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

Source-repository head
  type:     git
  location: https://github.com/UnkindPartition/tasty-golden.git

library
  Default-language:
    Haskell2010
  default-extensions:
    ScopedTypeVariables
  exposed-modules:     Test.Tasty.Golden
                       Test.Tasty.Golden.Advanced
                       Test.Tasty.Golden.Manage
  other-modules:
                       Test.Tasty.Golden.Internal

  ghc-options: -Wall

  build-depends:
    base >= 4.9 && < 5,
    tasty >= 1.3,
    bytestring >= 0.9.2.1,
    typed-process,
    optparse-applicative >= 0.3.1,
    filepath,
    temporary,
    deepseq,
    containers,
    directory,
    text

Test-suite test
  Default-language:
    Haskell2010
  Type:
    exitcode-stdio-1.0
  Hs-source-dirs:
    tests
  Main-is:
    test.hs
  Build-depends:
      base >= 4.9 && < 5
    , tasty >= 1.2
    , tasty-hunit
    , tasty-golden
    , filepath
    , directory
    , typed-process
    , temporary
  if (flag(build-example))
    cpp-options: -DBUILD_EXAMPLE
  Ghc-options: -threaded

flag build-example
  default: False
  manual: True

-- An example test suite used for testing.
-- Tries to exercise all ways to create golden tests.
-- Not built by default. To build it, turn on the build-example flag:
--
--  stack build :example --flag tasty-golden:build-example
executable example
  Default-language:
    Haskell2010
  Hs-source-dirs:
    example
  Main-is:
    example.hs
  if (! flag(build-example))
    buildable: False
  Build-depends:
      base >= 4 && < 5
    , filepath
    , bytestring
    , tasty
    , tasty-golden
  Ghc-options: -threaded
